[package]
name = "solana-did"
version = "0.1.0"
authors = ["vpandya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.5.10"
serde = "1.0.125"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
clap = "2.33.3"
qrcode = "0.12.0"
serde_json = "1.0"
